--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,10 @@
-FROM python:3.9-alpine
+FROM python:slim
 
 WORKDIR /code
 
 COPY ./requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./app /code/app
+COPY ./main.py /code/main.py
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
