--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,9 +2,9 @@ FROM python:slim
 
 WORKDIR /code
 
-COPY ./requirements.txt /code/requirements.txt
+COPY ./app/requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
-COPY ./main.py /code/main.py
+COPY ./app/main.py /code/main.py
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
